--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 
     {% endblock title %}
   </title>
-  <link rel="stylesheet" href="{% static 'style.css' %} ">
+  <link rel="stylesheet" href="{% static 'css/base.css' %} ">
   {% block others %}
 
   {% endblock others %}
