--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -7,7 +7,7 @@
 {% endblock title %}
 
 {% block content %}
-<header class="">
+<header class="header">
   <div class="">
     <h1 class="">
       Unlimited movies, TV shows, and more.
