--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -8,18 +8,18 @@
 
 {% block content %}
 <header class="header">
-  <div class="">
-    <h1 class="">
+  <div class="header__content">
+    <h2 class="header__content--title">
       Unlimited movies, TV shows, and more.
-    </h1>
-    <h3 class="">
+    </h2>
+    <h3 class="header__content--subtitle">
       Watch anywhere. Cancel anytime.
     </h3>
-    <h4 class="">
+    <h4 class="header__content--subsubtitle">
       Ready to watch? Enter your email to create or restart your membership.
     </h4>
 
-    <div class="">
+    <div class="header__content--email">
       <div class="">
         <input type="email" name="" id="" placeholder="Email address" class="">
         <a href='{% url "account_signup" %}' class='md:w-1/4'>
