--- a/static/css/base.css
+++ b/static/css/base.css
@@ -68,3 +68,19 @@ body {
   align-items: center;
   justify-content: space-between;
 }
+
+.main {
+  min-height: 100vh;
+  width: 100%;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.profile__item {
+  width: 8rem;
+  height: 8rem;
+  background-color: blue;
+}
