--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
 </head>
 
 <body class='bg-black text-gray-100 font-primary'>
-
+  {% include "partials/navbar.html" %}
   {% block content %}
 
   {% endblock content %}
