--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -1,6 +1,6 @@
 {% load static %}
 <nav class="navbar">
-  <div class="w-6/12">
+  <div class="">
     <a href='/'>
 
       <img src="{% static 'netflix.png' %}" alt="logo" class="">
@@ -12,7 +12,7 @@
   <div>
     <form action="{% url 'account_logout' %}" method="post">
       {% csrf_token %}
-      <button class="">
+      <button class=''>
         Logout
       </button>
     </form>
