--- a/core/templates/profile_list.html
+++ b/core/templates/profile_list.html
@@ -23,7 +23,7 @@
     </div>
     {% endfor %}
 
-    {% comment %} {% if request.user.profiles.all|length < 5 %}
+    {% if request.user.profiles.all|length < 5 %}
     <div class="">
       <a href="{% url 'core:profile_create' %}">
 
@@ -32,7 +32,7 @@
         </button>
       </a>
     </div>
-    {% endif %} {% endcomment %}
+    {% endif %}
   </div>
 </div>
 
