--- a/static/css/base.css
+++ b/static/css/base.css
@@ -83,6 +83,27 @@ body {
   width: 8rem;
   height: 8rem;
   background-color: blue;
+  color: white;
+  border-radius: 0.6em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-weight: 900;
+}
+
+.profile__item--label {
+  font-size: 5rem;
+  color: rgba(255, 255, 255, 0.74);
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+
+.profile__item--name {
+  margin-top: 0.5em;
 }
 
 .form {
