Add styling to navbar

--- a/core/templates/show_movie.html
+++ b/core/templates/show_movie.html
@@ -13,7 +13,7 @@
 
   {{ movie|json_script:"movie_data" }}
 
-  <video controls class="w-full h-screen player"></video>
+  <video controls width="250" class=""></video>
 
 
 
