--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -21,17 +21,16 @@
     </h4>
 
     <div class="header__content--email">
-      <div class="">
-        <input type="email" name="" id="" placeholder="Email address" class="">
-        <a href='{% url "account_signup" %}' class='md:w-1/4'>
+      <input type="email" name="" id="" placeholder="Email address" class="email__input">
+      <a href='{% url "account_signup" %}' class='md:w-1/4'>
 
-          <button class="">
-            <span>
-              Get Started
-              <i></i>
-          </button>
-        </a>
-      </div>
+        <button class="hero__btn">
+          <span>
+            Get Started
+            <i></i>
+        </button>
+      </a>
+
     </div>
   </div>
 </header>
