Add styling to tv section

--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -35,16 +35,16 @@
   </div>
 </header>
 
-<section class="">
-  <div class="">
-    <h2 class="4">
+<section class="tv">
+  <div class="tv__content">
+    <h2 class="tv__content--title">
       Enjoy on your TV.
     </h2>
-    <h5 class="">
+    <h5 class="tv__content--subtitle">
       Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.
     </h5>
   </div>
-  <div class="">
+  <div class="tv__image">
     <img src="{% static 'tv.png' %}" class="w-8/12" alt="">
   </div>
 </section>
