Add styling to download section

--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -49,16 +49,16 @@
   </div>
 </section>
 
-<section class="">
-  <div class="">
+<section class="download">
+  <div class="download__image">
     <img src="{% static 'mobile-0819.jpg' %}" class="w-8/12" alt="">
   </div>
 
-  <div class="">
-    <h2 class="">
+  <div class="download__content">
+    <h2 class="download__content--title">
       Download your shows to watch offline.
     </h2>
-    <h5 class="">
+    <h5 class="download__content--subtitle">
       Save your favorites easily and always have something to watch.
     </h5>
   </div>
