--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -36,47 +36,58 @@
 </header>
 
 <section class="tv">
-  <div class="tv__content">
-    <h2 class="tv__content--title">
-      Enjoy on your TV.
-    </h2>
-    <h5 class="tv__content--subtitle">
-      Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.
-    </h5>
-  </div>
-  <div class="tv__image">
-    <img src="{% static 'tv.png' %}" class="w-8/12" alt="">
+  <div class="subsectiion">
+    <div class="tv__content">
+      <h2 class="tv__content--title">
+        Enjoy on your TV.
+      </h2>
+      <h5 class="tv__content--subtitle">
+        Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.
+      </h5>
+    </div>
+    <div class="tv__image">
+      <img src="{% static 'tv.png' %}" class="w-8/12" alt="">
+    </div>
   </div>
 </section>
 
 <section class="download">
-  <div class="download__image">
-    <img src="{% static 'mobile-0819.jpg' %}" class="w-8/12" alt="">
-  </div>
+  <div class="subsectiion">
+    <div class="download__image">
+      <img src="{% static 'mobile-0819.jpg' %}" class="w-8/12" alt="">
+    </div>
 
-  <div class="download__content">
-    <h2 class="download__content--title">
-      Download your shows to watch offline.
-    </h2>
-    <h5 class="download__content--subtitle">
-      Save your favorites easily and always have something to watch.
-    </h5>
+    <div class="download__content">
+      <h2 class="download__content--title">
+        Download your shows to watch offline.
+      </h2>
+      <h5 class="download__content--subtitle">
+        Save your favorites easily and always have something to watch.
+      </h5>
+    </div>
   </div>
-
 </section>
 
-<section class=''>
-  <div class="">
-    <h2 class="">
-      Create profiles for kids.
-    </h2>
-    <h5 class="">
-      Send kids on adventures with their favorite characters in a space made just for them—free with your membership.
-    </h5>
+<section class="kids">
+  <div class="subsectiion">
+    <div class="kids__content">
+      <h2 class="kids__content--title">
+        Create profiles for kids.
+      </h2>
+      <h5 class="kids__content--subtitle">
+        Send kids on adventures with their favorite characters in a space made just for them—free with your membership.
+      </h5>
+    </div>
+    <div class="kids__image">
+      <img src="{% static 'netflix_kid.png' %}" class="" alt="">
+    </div>
   </div>
-  <div class="">
-    <img src="{% static 'netflix_kid.png' %}" class="" alt="">
-  </div>
+</section>
+
+<section class="questions">
+  <div class="subsectiion"></div>
+  <h2 class="questions__title">Frequently Asked Questions</h2>
+
 </section>
 <footer class="">
   <ul class="">
