--- a/static/css/base.css
+++ b/static/css/base.css
@@ -130,7 +130,8 @@ body {
 /* TV section */
 .tv,
 .download,
-.kids {
+.kids,
+.questions__section {
   width: 100%;
   padding: 2em;
   display: flex;
@@ -189,6 +190,69 @@ body {
   display: block;
   object-fit: contain;
 }
+
+/*----- Question section -----*/
+.questions__container {
+  max-width: 40rem;
+  margin: 3em auto;
+}
+
+.question__holder {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border-top: 1px solid #9194a15d;
+}
+
+.question__header {
+  display: flex;
+  justify-content: space-between;
+  padding: 2em 0;
+}
+
+.question:last-child {
+  border-bottom: 1px solid #9194a15d;
+}
+
+.question__title {
+  font-weight: 500;
+  margin-left: 0.3em;
+  color: var(--clr-neutral--900);
+  text-align: start;
+  max-width: 75%;
+}
+
+.question__arrow {
+  width: 1.5rem;
+  background-image: url('../images/icon-arrow-down.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-right: 1.5em;
+}
+
+.question__holder.show .question__arrow {
+  background-image: url('../images/icon-arrow-up.svg');
+  transform: rotate(180deg);
+}
+
+.question__answer {
+  display: none;
+}
+
+.question__holder.show .question__answer {
+  display: block;
+  margin: 0.3em 0.3em 2em 0.3em;
+  line-height: 2rem;
+  color: var(--clr-neutral--300);
+}
+
+.questions__btns {
+  display: flex;
+  justify-content: center;
+}
+
+
+
 
 .main {
   min-height: 100vh;
