--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,9 @@
   {% block others %}
 
   {% endblock others %}
+  {% block extra_js %}
+
+  {% endblock extra_js %}
 </head>
 
 <body class='bg-black text-gray-100 font-primary'>
