Add hide other questions functionality

--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -107,8 +107,7 @@
             <p class="question__answer">
               Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime,
               documentaries, and more on thousands of internet-connected devices.
-            </p>
-            <p class="question__answer">
+
               You can watch as much as you want, whenever you want without a single commercial – all for one low monthly
               price. There's always something new to discover and new TV shows and movies are added every week!
             </p>
@@ -140,8 +139,7 @@
               Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at netflix.com
               from your personal computer or on any internet-connected device that offers the Netflix app, including
               smart TVs, smartphones, tablets, streaming media players and game consoles.
-            </p>
-            <p class="question__answer">
+
               You can also download your favorite shows with the iOS, Android, or Windows 10 app. Use downloads to watch
               while you're on the go and without an internet connection. Take Netflix with you anywhere.
             </p>
@@ -186,8 +184,7 @@
             <p class="question__answer">
               The Netflix Kids experience is included in your membership to give parents control while kids enjoy
               family-friendly TV shows and movies in their own space.
-            </p>
-            <p class="question__answer">
+
               Kids profiles come with PIN-protected parental controls that let you restrict the maturity rating of
               content kids can watch and block specific titles you don’t want kids to see.
             </p>
@@ -207,6 +204,7 @@
 <script>
   // Variables for questions
   const questions = document.querySelectorAll(".question");
+  const questionHolders = document.querySelectorAll(".question__holder");
 
 
 
@@ -216,11 +214,16 @@
    */
   const showHideAnswer = function (e) {
     const clicked = e.target.closest(".question__holder");
-    if (!clicked) {
-      return;
-    };
-    clicked.classList.toggle("show");
-
+    if (!clicked) return;
+    if (clicked) {
+      questionHolders.forEach((questionHolder) => {
+        // If click, check whether the not clicked element and remove the class "show"
+        if (questionHolder !== clicked) {
+          questionHolder.classList.remove("show");
+        }
+      });
+      clicked.classList.toggle("show");
+    }
   };
   // Control Question/Answer functionality
   questions.forEach((question) => {
