--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -88,114 +88,112 @@
   </div>
 </section>
 
-<section class="questions__section">
-  <div class="subsectiion">
-    <!-- Q & A section -->
-    <section class="questions section">
-      <h2 class="section__title">Frequently Asked Questions</h2>
 
-      <!-- Questions -->
-      <div class="questions__container">
-        <div class="question">
-          <div class="question__holder">
-            <div class="question__header">
-              <div class="question__title">
-                What is Netflix?
-              </div>
-              <div class="question__arrow"></div>
-            </div>
-            <p class="question__answer">
-              Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime,
-              documentaries, and more on thousands of internet-connected devices.
+<!-- Q & A section -->
+<section class="questions__main">
+  <h2 class="questions__main--title">Frequently Asked Questions</h2>
 
-              You can watch as much as you want, whenever you want without a single commercial – all for one low monthly
-              price. There's always something new to discover and new TV shows and movies are added every week!
-            </p>
+  <!-- Questions -->
+  <div class="questions__container">
+    <div class="question">
+      <div class="question__holder">
+        <div class="question__header">
+          <div class="question__title">
+            What is Netflix?
           </div>
+          <div class="question__arrow"></div>
         </div>
-        <div class="question">
-          <div class="question__holder">
-            <div class="question__header">
-              <div class="question__title">
-                How does Netflix const?
-              </div>
-              <div class="question__arrow"></div>
-            </div>
-            <p class="question__answer">
-              Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one fixed monthly
-              fee. Plans range from $9.99 to $19.99 a month. No extra costs, no contracts.
-            </p>
-          </div>
-        </div>
-        <div class="question">
-          <div class="question__holder">
-            <div class="question__header">
-              <div class="question__title">
-                Where can I watch?
-              </div>
-              <div class="question__arrow"></div>
-            </div>
-            <p class="question__answer">
-              Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at netflix.com
-              from your personal computer or on any internet-connected device that offers the Netflix app, including
-              smart TVs, smartphones, tablets, streaming media players and game consoles.
+        <p class="question__answer">
+          Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime,
+          documentaries, and more on thousands of internet-connected devices.
 
-              You can also download your favorite shows with the iOS, Android, or Windows 10 app. Use downloads to watch
-              while you're on the go and without an internet connection. Take Netflix with you anywhere.
-            </p>
-          </div>
-        </div>
-        <div class="question">
-          <div class="question__holder">
-            <div class="question__header">
-              <div class="question__title">
-                Who do I cancel?
-              </div>
-              <div class="question__arrow"></div>
-            </div>
-            <p class="question__answer">
-              Netflix is flexible. There are no pesky contracts and no commitments. You can easily cancel your account
-              online in two clicks. There are no cancellation fees – start or stop your account anytime.
-            </p>
-          </div>
-        </div>
-        <div class="question">
-          <div class="question__holder">
-            <div class="question__header">
-              <div class="question__title">
-                Who can I watch on Netflix?
-              </div>
-              <div class="question__arrow"></div>
-            </div>
-            <p class="question__answer">
-              Netflix has an extensive library of feature films, documentaries, TV shows, anime, award-winning Netflix
-              originals, and more. Watch as much as you want, anytime you want.
-            </p>
-          </div>
-        </div>
-        <div class="question">
-          <div class="question__holder">
-            <div class="question__header">
-              <div class="question__title">
-                Is Netflix good for kids?
-              </div>
-              <div class="question__arrow"></div>
-            </div>
-            <p class="question__answer">
-              The Netflix Kids experience is included in your membership to give parents control while kids enjoy
-              family-friendly TV shows and movies in their own space.
-
-              Kids profiles come with PIN-protected parental controls that let you restrict the maturity rating of
-              content kids can watch and block specific titles you don’t want kids to see.
-            </p>
-          </div>
-        </div>
+          You can watch as much as you want, whenever you want without a single commercial – all for one low monthly
+          price. There's always something new to discover and new TV shows and movies are added every week!
+        </p>
       </div>
-      <div class="questions__btns">
-        <button class="btn main__btn--blue">More Info</button>
+    </div>
+    <div class="question">
+      <div class="question__holder">
+        <div class="question__header">
+          <div class="question__title">
+            How does Netflix const?
+          </div>
+          <div class="question__arrow"></div>
+        </div>
+        <p class="question__answer">
+          Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one fixed monthly
+          fee. Plans range from $9.99 to $19.99 a month. No extra costs, no contracts.
+        </p>
       </div>
-    </section>
+    </div>
+    <div class="question">
+      <div class="question__holder">
+        <div class="question__header">
+          <div class="question__title">
+            Where can I watch?
+          </div>
+          <div class="question__arrow"></div>
+        </div>
+        <p class="question__answer">
+          Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at netflix.com
+          from your personal computer or on any internet-connected device that offers the Netflix app, including
+          smart TVs, smartphones, tablets, streaming media players and game consoles.
+
+          You can also download your favorite shows with the iOS, Android, or Windows 10 app. Use downloads to watch
+          while you're on the go and without an internet connection. Take Netflix with you anywhere.
+        </p>
+      </div>
+    </div>
+    <div class="question">
+      <div class="question__holder">
+        <div class="question__header">
+          <div class="question__title">
+            Who do I cancel?
+          </div>
+          <div class="question__arrow"></div>
+        </div>
+        <p class="question__answer">
+          Netflix is flexible. There are no pesky contracts and no commitments. You can easily cancel your account
+          online in two clicks. There are no cancellation fees – start or stop your account anytime.
+        </p>
+      </div>
+    </div>
+    <div class="question">
+      <div class="question__holder">
+        <div class="question__header">
+          <div class="question__title">
+            Who can I watch on Netflix?
+          </div>
+          <div class="question__arrow"></div>
+        </div>
+        <p class="question__answer">
+          Netflix has an extensive library of feature films, documentaries, TV shows, anime, award-winning Netflix
+          originals, and more. Watch as much as you want, anytime you want.
+        </p>
+      </div>
+    </div>
+    <div class="question">
+      <div class="question__holder">
+        <div class="question__header">
+          <div class="question__title">
+            Is Netflix good for kids?
+          </div>
+          <div class="question__arrow"></div>
+        </div>
+        <p class="question__answer">
+          The Netflix Kids experience is included in your membership to give parents control while kids enjoy
+          family-friendly TV shows and movies in their own space.
+
+          Kids profiles come with PIN-protected parental controls that let you restrict the maturity rating of
+          content kids can watch and block specific titles you don’t want kids to see.
+        </p>
+      </div>
+    </div>
   </div>
+  <div class="questions__btns">
+    <button class="btn main__btn--blue">More Info</button>
+  </div>
+
 
 </section>
 <footer class="">
