--- a/static/css/base.css
+++ b/static/css/base.css
@@ -131,7 +131,7 @@ body {
 .tv,
 .download,
 .kids,
-.questions__section {
+.questions__main {
   width: 100%;
   padding: 2em;
   display: flex;
@@ -192,6 +192,15 @@ body {
 }
 
 /*----- Question section -----*/
+.questions__main {
+  flex-direction: column;
+}
+
+.questions__main--title {
+  font-size: 3rem;
+  margin-top: 2em;
+}
+
 .questions__container {
   max-width: 40rem;
   width: 100%;
@@ -202,38 +211,40 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  border-top: 1px solid #9194a15d;
+  /* border-top: 1px solid #9194a15d; */
+  margin-bottom: 0.5rem;
 }
 
 .question__header {
   display: flex;
   justify-content: space-between;
-  padding: 2em 0;
-}
+  align-items: center;
+  padding: 1em 1.5em;
 
-.question:last-child {
-  border-bottom: 1px solid #9194a15d;
+  background-color: #303030;
 }
 
 .question__title {
   font-weight: 500;
-  margin-left: 0.3em;
   color: var(--clr-neutral--900);
   text-align: start;
   max-width: 75%;
+  font-size: 1.5rem;
+
 }
 
 .question__arrow {
   width: 1.5rem;
+  height: 1.5rem;
   background-image: url('../images/plus_open.svg');
   background-repeat: no-repeat;
   background-position: center;
-  margin-right: 1.5em;
+  /* margin-right: 1.5em; */
   color: #ffffff;
 }
 
 .question__holder.show .question__arrow {
-  background-image: url('../images/plus_close.svg');
+  background-image: url('../images/plus_close1.svg');
   transform: rotate(180deg);
 }
 
@@ -243,9 +254,11 @@ body {
 
 .question__holder.show .question__answer {
   display: block;
-  margin: 0.3em 0.3em 2em 0.3em;
+  margin-top: 0.1rem;
   line-height: 2rem;
-  color: var(--clr-neutral--300);
+  background-color: #303030;
+  padding: 1.7em 3em 1.7em 1.5em;
+  font-size: 1.5rem;
 }
 
 .questions__btns {
