--- a/static/css/base.css
+++ b/static/css/base.css
@@ -252,6 +252,10 @@ body {
   display: none;
 }
 
+.question__answer--second {
+  margin-top: 1.7em;
+}
+
 .question__holder.show .question__answer {
   display: block;
   margin-top: 0.1rem;
