Add content to footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -44,4 +44,94 @@
 
 </body>
 
+<footer class="footer">
+  <ul class="footer__content">
+    <li class="footer__content--item">
+      <a class="footer__link" href="#" aria-label="link to FAQ">
+        <span id="" data-uia="data-uia-footer-label">FAQ</span>
+      </a>
+    </li>
+    <li class="footer__content--item">
+      <a class="footer__link" href="#" aria-label="link to Help Center">
+        <span id="" data-uia="data-uia-footer-label">Help Center</span>
+      </a>
+    </li>
+    <li class="footer__content--item">
+      <a class="footer__link" href="#" aria-label="link to Account">
+        <span id="" data-uia="data-uia-footer-label">Account</span>
+      </a>
+    </li>
+    <li class="footer__content--item">
+      <a class="footer__link" href="#" aria-label="link to Media Center">
+        <span id="" data-uia="data-uia-footer-label">Media Center</span>
+      </a>
+    </li>
+    <li class="footer__content--item">
+      <a class="footer__link" href="#" aria-label="link to Investor Relations">
+        <span id="" data-uia="data-uia-footer-label">Investor Relations</span>
+      </a>
+    </li>
+    <li class="footer__content--item">
+      <a class="footer__link" href="#" aria-label="link to Jobs">
+        <span id="" data-uia="data-uia-footer-label">Jobs</span>
+      </a>
+    </li>
+    <li class="footer__content--item">
+      <a class="footer__link" href="#" aria-label="link to Redeem Gift Cards">
+        <span id="" data-uia="data-uia-footer-label">Redeem Gift Cards</span>
+      </a>
+    </li>
+    <li class="footer__content--item">
+      <a class="footer__link" href="#" aria-label="link to Buy Gift Cards">
+        <span id="" data-uia="data-uia-footer-label">Buy Gift Cards</span>
+      </a>
+    </li>
+    <li class="footer__content--item">
+      <a class="footer__link" href="#" aria-label="link to Sell Ways to Watch">
+        <span id="" data-uia="data-uia-footer-label">Ways to Watch</span>
+      </a>
+    </li>
+    <li class="footer__content--item">
+      <a class="footer__link" href="#" aria-label="link to Terms of Use">
+        <span id="" data-uia="data-uia-footer-label">Terms of Use</span>
+      </a>
+    </li>
+    <li class="footer__content--item">
+      <a class="footer__link" href="#" aria-label="link to Privacy">
+        <span id="" data-uia="data-uia-footer-label">Privacy</span>
+      </a>
+    </li>
+    <li class="footer__content--item">
+      <a class="footer__link" href="#" aria-label="link to Cookie Preferences">
+        <span id="" data-uia="data-uia-footer-label">Cookie Preferences</span>
+      </a>
+    </li>
+    <li class="footer__content--item">
+      <a class="footer__link" href="#" aria-label="link to Corporate Information">
+        <span id="" data-uia="data-uia-footer-label">Corporate Information</span>
+      </a>
+    </li>
+    <li class="footer__content--item">
+      <a class="footer__link" href="#" aria-label="link to Contact Us">
+        <span id="" data-uia="data-uia-footer-label">Contact Us</span>
+      </a>
+    </li>
+    <li class="footer__content--item">
+      <a class="footer__link" href="#" aria-label="link to Speed Test">
+        <span id="" data-uia="data-uia-footer-label">Speed Test</span>
+      </a>
+    </li>
+    <li class="footer__content--item">
+      <a class="footer__link" href="#" aria-label="link to Legal Notices">
+        <span id="" data-uia="data-uia-footer-label">Legal Notices</span>
+      </a>
+    </li>
+    <li class="footer__content--item">
+      <a class="footer__link" href="#" aria-label="link to Only on Netflix">
+        <span id="" data-uia="data-uia-footer-label">Only on Netflix</span>
+      </a>
+    </li>
+  </ul>
+</footer>
+
 </html>
